added new collection section and roadmap

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Berlin';
-    src: local('Berlin'), url(./assets/fonts/baskerville\ bold\ bt.ttf) format('truetype');
+    src: local('Berlin'), url(./assets/fonts/font2.ttf) format('truetype');
   }
 
 
